[tool.poetry]
name = "classcharts.py"
version = "0.1.0"
description = "A python wrapper for the Classcharts API"
authors = [
    "Nadir Chowdhury <chowdhurynadir0@outlook.com>",
    "Zomatree",
    "Daniel Trowbridge <danieljtrowbridge@pm.me>"
]
license = "MIT"
packages = [
    {include = "classcharts"}
]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = ">=3.6.2"
beautifulsoup4 = ">=4.8.2"
lxml = ">=4.5.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
